syntax = "proto3";

option csharp_namespace = "TodoApp.Core.Protos.Task";

package task;

service TaskManager {
  rpc Read (Empty) returns (TaskList);
  rpc Find (TaskUuid) returns (RawTask);
  rpc Create (CreateTask) returns (RawTask);
  rpc Delete (TaskUuid) returns (RawTask);
  rpc Update (UpdateTask) returns (RawTask);
}

message Empty {}

message RawTask {
  int64 taskId = 1;
  string uuid = 2;
  string title = 3;
  string description = 4;
  bool complete = 5;
}

message TaskList {
  repeated RawTask tasks = 1;
}

message CreateTask {
  string title = 1;
  string description = 2;
  bool complete = 3;
}

message PartialTask {
  string uuid = 1;
  string title = 2;
  string description = 3;
  bool complete = 4;
}

message TaskUuid {
  string uuid = 1;
}

message UpdateTask {
  string uuid = 1;
  string title = 2;
  string description = 3;
  bool complete = 4;
}
